src/objects/MT_MediaBroadcastImportError__c.object
<CustomObject>
    <fields>
        <fullName>MT_CampaignID__c</fullName>
        <label>Campaign ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_LastExport__c</fullName>
        <label>Last Export</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MB1__c</fullName>
        <label>MB1</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MB3__c</fullName>
        <label>MB3</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MN3__c</fullName>
        <label>MN3</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaign_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>MT_MediaCampaign__c</referenceTo>
        <relationshipLabel>Media Broadcast Import Errors</relationshipLabel>
        <relationshipName>Media_Broadcast_Import_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OrderType__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Sponsoring</fullName>
                </value>
                <value>
                    <fullName>Overbooking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_ProSaOrderID__c</fullName>
        <label>ProSa Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_ProSaOrder_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProSa Order</label>
        <referenceTo>MT_ProSaOrder__c</referenceTo>
        <relationshipLabel>Media Broadcast Import Errors</relationshipLabel>
        <relationshipName>Media_Broadcast_Import_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_SenderName__c</fullName>
        <label>TV Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SenderNumber__c</fullName>
        <label>Sender Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Timeslot__c</fullName>
        <label>Timeslot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1.[06-09]</fullName>
                </value>
                <value>
                    <fullName>2.[09-13]</fullName>
                </value>
                <value>
                    <fullName>3.[13-17]</fullName>
                </value>
                <value>
                    <fullName>4.[17-20]</fullName>
                </value>
                <value>
                    <fullName>5.[20-23]</fullName>
                </value>
                <value>
                    <fullName>6.[23-01]</fullName>
                </value>
                <value>
                    <fullName>7.[01-06]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Broadcast Import Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>MT_Month__c</columns>
        <columns>MT_Error__c</columns>
        <columns>MT_CampaignID__c</columns>
        <columns>MT_LastExport__c</columns>
        <columns>MT_ProSaOrderID__c</columns>
        <columns>MT_SenderName__c</columns>
        <columns>MT_Timeslot__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MBIDE-{00000000}</displayFormat>
        <label>Media Broadcast Import Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Broadcast Import Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>